--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   ],
   "require": {
     "aws/aws-sdk-php": "^3.26",
-    "web-token/jwt-signature": "^2.2"
+    "web-token/jwt-signature": "^2.2",
+    "web-token/jwt-signature-algorithm-rsa": "2.2.11"
   },
   "autoload": {
     "psr-4": {
